feat(oidc): add support for custom base URLs in OIDC configuration and validation
Signed-off-by: Balázs Szücs <bszucs1209@gmail.com>